orders/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
  namespace: microservices-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          imagePullPolicy: Always
          image: localhost:5000/orders
          ports:
            - containerPort: 8080
            - containerPort: 8081
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 6
            httpGet:
              port: 8081
              path: /actuator/health
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 8
            httpGet:
              port: 8081
              path: /actuator/health
